--- a/test.html
+++ b/test.html
@@ -21,6 +21,11 @@
 
 .bgimage.hero{
     height:80vh;
+    width:100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
 }
 
 .bgimage.bgimg{
@@ -169,7 +174,7 @@ p, .display{
 
 <div class="px-md-5">
 <section class="bgimage hero" style="
-background: url('https://images.unsplash.com/photo-1525201548942-d8732f6617a0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=3900&q=80');">
+background: url('assets/images/herobg.jpg');">
     <div class="row mx-0 px-0">
       <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
           <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center">Welcome</h1>
