--- a/_pragma/index.html
+++ b/_pragma/index.html
@@ -1,6 +1,6 @@
 ---
 layout: serie
-serie: "Pragma"
+tag: "Pragma"
 blockquote:
     text: "The elements of every concept enter into logical thought at the gate of perception and make their exit at the gate of purposive action"
     author: "Charles S. Peirce [1903]"
