--- a/_pragma/index.html
+++ b/_pragma/index.html
@@ -5,6 +5,6 @@ blockquote:
     text: "The elements of every concept enter into logical thought at the gate of perception and make their exit at the gate of purposive action"
     author: "Charles S. Peirce [1903]"
     source: "Harvard Lectures on Pragmatism: Lecture VII"
-permalink: /test/
+permalink: /pragma/
 ---
 
